--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compilerOptions": {
-    "extends": "./tsconfig.paths.json",
+    "baseUrl": ".",
+    "paths": {
+            "@/components/*": ["src/components/*"],
+            "@/services/*": ["src/services/*"],
+            "@/*": ["src/*"]
+        },
     "target": "es5",
     "lib": [
       "dom",
