--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,7 +3,8 @@
         "baseUrl": ".",
         "paths": {
             "@components/*": ["src/components/*"],
-            "@services/*": ["src/services/*"]
+            "@services/*": ["src/services/*"],
+            "@/*": ["src/*"]
         }
     }
 }
