--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.4.2",
     "framer-motion": "^10.15.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@types/compose-function": "^0.0.30",
+    "@types/react-datepicker": "^4.15.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "sass": "^1.64.1",
     "vite": "^4.4.7"
